--- a/public/javascripts/wymeditor/skins/default/skin.css
+++ b/public/javascripts/wymeditor/skins/default/skin.css
@@ -1,6 +1,6 @@
 /*
  * WYMeditor : what you see is What You Mean web-based editor
- * Copyright (c) 2008 Jean-Francois Hovinne, http://www.wymeditor.org/
+ * Copyright (c) 2005 - 2009 Jean-Francois Hovinne, http://www.wymeditor.org/
  * Dual licensed under the MIT (MIT-license.txt)
  * and GPL (GPL-license.txt) licenses.
  *
@@ -81,7 +81,7 @@
 
     /*option: add this class to a section to make it render as a dropdown menu*/
         .wym_skin_default .wym_dropdown h2        { display: block; }
-        .wym_skin_default .wym_dropdown ul        { background: white; }
+        .wym_skin_default .wym_dropdown ul        { display: none; position: absolute; background: white; }
         .wym_skin_default .wym_dropdown:hover ul,
         .wym_skin_default .wym_dropdown.hover ul  { display: block; }
 
