rename static.css to wymeditor-static.css to avoid a potential naming conflict

--- a/app/views/admin/pages/_form.html.erb
+++ b/app/views/admin/pages/_form.html.erb
@@ -9,7 +9,7 @@
       $j('.wymeditor').wymeditor({
         xhtmlParser: 'xhtml_parser.js',
         cssParser:   'wym_css_parser.js',
-        stylesheet: '/stylesheets/static.css?v='+Math.random(),
+        stylesheet: '/stylesheets/wymeditor-static.css',
         containersItems: [
           {'name': 'P', 'title': 'Paragraph', 'css': 'wym_containers_p'},
           {'name': 'H1', 'title': 'Heading_1', 'css': 'wym_containers_h1'},
